@@ -11,7 +11,7 @@ import hudson.model.TaskListener;
 import hudson.slaves.ComputerLauncher;
 import hudson.slaves.RetentionStrategy;
 import java.io.IOException;
-import java.util.Collections;
+import java.util.List;
 
 /**
  * Slave that pretends to fork processes.
@@ -28,7 +28,7 @@ public class PretendSlave extends Slave {
     public int numLaunch;
 
     public PretendSlave(String name, String remoteFS, int numExecutors, Mode mode, String labelString, ComputerLauncher launcher, FakeLauncher faker) throws IOException, FormException {
-        super(name, "pretending a slave", remoteFS, String.valueOf(numExecutors), mode, labelString, launcher, RetentionStrategy.NOOP, Collections.emptyList());
+        super(name, "pretending a slave", remoteFS, String.valueOf(numExecutors), mode, labelString, launcher, RetentionStrategy.NOOP, List.of());
         this.faker = faker;
     }
 
@@ -41,6 +41,7 @@ public class PretendSlave extends Slave {
     @Override
     public Launcher createLauncher(TaskListener listener) {
         return new LocalLauncher(listener) {
+            @Override
             public Proc launch(ProcStarter starter) throws IOException {
                 synchronized (PretendSlave.this) {
                     numLaunch++;
